Refactor project structure and add Firebase integration
- Update .gitignore to include serviceAccountKey.json and .env
- Create PROJECT_INFO.md for project overview and architecture details
- Implement monitoring API with Firebase connection tests
- Revise Firebase initialization in config.py to use environment variables
- Add initial files for core, db, models, schemas, and services
- Update requirements.txt to include testing and environment variable packages
- Create seed script and todo list for project tasks

--- a/.gitignore
+++ b/.gitignore
@@ -173,5 +173,12 @@ poetry.toml
 # LSP config files
 pyrightconfig.json
 
-# End of https://www.toptal.com/developers/gitignore/api/pythonserviceAccountKey.json 
-serviceAccountKey.json 
+# End of https://www.toptal.com/developers/gitignore/api/python
+
+# Firebase credentials (NEVER commit these)
+serviceAccountKey.json
+
+# Environment variables
+.env
+.env.local
+
