--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 annotated-doc==0.0.3
 annotated-types==0.7.0
 anyio==4.11.0
+bcrypt==5.0.0
 CacheControl==0.14.3
 cachetools==6.2.1
 certifi==2025.10.5
@@ -29,6 +30,7 @@ httpx==0.28.1
 hyperframe==6.1.0
 idna==3.11
 msgpack==1.1.2
+passlib==1.7.4
 proto-plus==1.26.1
 protobuf==6.33.0
 pyasn1==0.6.1
